# tax_qa_platform

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: base.py  qa_agent.py  structured_agents.py  text2sql_agent.py  tools.py  web_search_agent.py
app/api/: __init__.py  routes_chat.py  routes_health.py
app/clients/: __init__.py  embedding_client.py  es_client.py  llm_client.py  mcp_client.py  milvus_client.py  minio_client.py  mongo_client.py  mysql_client.py  qdrant_meta_client.py  reranker_client.py
app/graph/: nodes.py  pipeline.py  state.py
app/mcp/: __init__.py  server.py
app/memory/: session.py
app/schemas/: chat.py  document.py
app/utils/: normalize.py  prompt_loader.py  sse.py  timing.py
app/web/: index.html
config/: constants.py  logging_config.py  paths.py  settings.py
config/prompts/: hyde.prompt  intent_classify.prompt  query_rewrite.prompt  summarize.prompt  text2sql_fix.prompt  text2sql_generate.prompt  text2sql_schema_link.prompt
data/: README.md
data/documents/: 个人所得税专项附加扣除政策.md  企业所得税税前扣除凭证管理办法.md  出口货物退免税政策.md  印花税税目税率与征收管理.md  固定资产加速折旧税收政策.md  增值税专用发票开具与红字冲销管理.md  增值税进项税额抵扣管理规定.md  小型微利企业所得税优惠政策.md  (+6 more)
docs/: ARCHITECTURE.md  e2e_验证报告.md  学习导图.md  能力地图.md  讲解_当前项目.html  讲解_朴素基线_对比.html
scripts/: __init__.py  build_metadata_index.py  ingest_documents.py  init_collections.py  run_e2e_examples.py  run_mcp_server.py
tests/: __init__.py  conftest.py  test_answerability.py  test_mcp.py  test_qu.py  test_router.py  test_smoke.py  test_streaming_regression.py
(+24 files in other folders)
